# picoripheral

./: LICENSE  README.md
doc/: README.md
examples/: rc.py
picoscope/: CMakeLists.txt  README.md  delay.pio  picoscope.c  picoscope.py  timer.pio
picounter/: CMakeLists.txt  README.md  counter.pio  picounter.c  picounter.py
pio-frequency-counter/: CMakeLists.txt  README.md  clock.pio  counter.pio  pio_clock.c  pio_counter.c  pio_counter.py  timer.pio
